# discovery

./: .gitignore  CMakeLists.txt  README
src/: blinky.c  led_button.c  main.c
src/eeprom/: main.c  spi_c.h
src/uart/: main.c  uart_c.c  uart_c.h
